@@ -26,6 +26,7 @@ Wolfpack 12.9.14 Beta (SVN)
   - Fixed light radius for certain lightsources.
   - Removed carve tags (and related files) which are no longer used.
   - Support for client 4.0.8.
+  - Added Samurai Empire craftables to the tailoring menu.
  * Python Script Changes:
   - Added a follow command.
   - Tinkers can now choose a second material.
